# nvim-config

./: .gitmodules  init.lua  lazy-lock.json  pyproject.toml
after/plugin/: browse.lua  chatgpt.lua  colors.lua  dapui.lua  harpoon.lua  lsp.lua  lualine.lua  neoformat.lua  neotest.lua  noice.lua  rose-pine.lua  snippy.lua  telescope.lua  transparent.lua  treesitter.lua  uuid-nvim.lua
lsp/: luals.lua  pyright.lua  ruff.lua
lua/ekaj2/: gpt_notes.lua  init.lua  lazy.lua  packer.lua  remap.lua  set.lua
lua/plugins/: init.lua
plugin/: packer_compiled.lua
snippets/: html.snippets  markdown.snippets  md.snippets  python.snippets
