[tool.poetry]
name = "nvim"
version = "0.1.0"
description = "Python setup for Neovim"
authors = ["Jake Duth <jakeduth2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynvim = "^0.4.3"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
